--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
     "nu"
   ],
   "author": "Leonhard Kipp",
-  "license": "MIT"
+  "license": "MIT",
+  "tree-sitter": [
+    {
+      "scope": "source.nu",
+      "file-types": [
+        "nu",
+      ],
+      "first-line-regex": "#!.*\\nu$"
+    }
+  ]
 }
