--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nu"
   ],
   "author": "Leonhard Kipp",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "tree-sitter": [
     {
       "scope": "source.nu",
